2008-04-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/image_save_dialog.cpp:
	- fixed a defect about saved directory selection.

2008-04-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/main_window.cpp:
	* qt4/player_painter.cpp:
	- disabled shortcut key help message for Windows.
	- tuned darker color.

2008-04-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/rcg2xml.cpp:
	- fixed gcc-4.2 warning.

	* classic/Makefile.am:
	* qt4/Makefile.am:
	* qt4/main_window.cpp:
	* qt4/options.cpp:
	- added missing disttarget files.
	- fixed incorrect settings.

2008-04-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/main_window.cpp:
	* qt4/options.cpp:
	- fixed defects about setting read/write.
	- fixed defects about canvas size on the initialization.

	* qt4/main_data.cpp:
	- fixed a defect about a return characther code.

	* qt4/main_window.cpp:
	- added an automatic directry setting to open the output file.

	* qt4/main_data.cpp:
	- implemented automatic file exteantion appending for an output
	file name.

	* qt4/config_dialog.cpp:
	- changed a layout.

	* qt4/config_dialog.h:
	* qt4/field_canvas.cpp:
	* qt4/field_canvas.h:
	* qt4/main_data.cpp:
	- implemented a player selection by mouse clicking.

	* qt4/log_player.cpp:
	* qt4/main_window.cpp:
	* qt4/options.cpp:
	* qt4/qt4.pro:
	* qt4/rcsslogplayer.rc:
	* rcsslogplayer/rcsslogplayer.pro:
	- fixed build problem on Windows.

2008-04-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/log_player_tool_bar.cpp:
	* qt4/main_window.cpp:
	- fixed shortcut keys.

	* qt4/disp_holder.cpp:
	* qt4/log_player.cpp:
	* qt4/main_window.cpp:
	* qt4/monitor_client.cpp:
	* rcsslogplayer/util.cpp:
	* rcsslogplayer/util.h:
	- implemented simple monitor client. Not completed yet.

	* qt4/image_save_dialog.cpp:
	* qt4/image_save_dialog.h:
	* qt4/Makefile.am:
	* qt4/field_canvas.cpp:
	* qt4/main_window.cpp:
	- added some monitor client related code, but not available yet.