@@ -1,5 +1,5 @@
 [12.1.0]
-  * Reimplemented rcsslogplayer using Qt4. Please note that Qt 4.3.0
+  * Reimplemented rcsslogplayer using Qt4. Please note that Qt 4.2.0
     or later is required to build the new logplayer. You can disable
     to build the new logplayer with './configure --disable-qt4'.
     The new logplayer supports qmake build system. If you have
